@@ -1,45 +1,46 @@
 package com.example.monolitico.Services;
 
+import com.example.monolitico.Entities.ClientEntity;
 import com.example.monolitico.Entities.FineEntity;
 import com.example.monolitico.Repositories.FineRepository;
+import com.example.monolitico.Service.ClientService;
 import com.example.monolitico.Service.FineService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.sql.Date;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-class FineServiceTest {
+public class FineServiceTest {
 
     @Mock
     private FineRepository fineRepository;
+
+    @Mock
+    private ClientService clientService;
 
     @InjectMocks
     private FineService fineService;
 
     private FineEntity fine;
+    private ClientEntity client;
 
     @BeforeEach
-    void setUp() {
+    void setup() {
         MockitoAnnotations.openMocks(this);
+        fine = new FineEntity(1L, 100L, "reposition", 10L, 20L, "pendiente", new Date(System.currentTimeMillis()));
 
-        fine = new FineEntity();
-        fine.setFineId(1L);
-        fine.setAmount(5000L);
-        fine.setType("fine");
-        fine.setClientId(10L);
-        fine.setLoanId(20L);
-        fine.setState("Pendiente");
-        fine.setDate(new Date(System.currentTimeMillis()));
+        client = new ClientEntity();
+        client.setClient_id(1L);
+        client.setAvaliable(true);
+        client.setState("activo");
     }
 
     @Test
@@ -50,106 +51,137 @@ class FineServiceTest {
 
         assertNotNull(result);
         assertEquals(1L, result.getFineId());
-        verify(fineRepository, times(1)).findById(1L);
     }
 
     @Test
     void testGetAllFine() {
-        when(fineRepository.findAll()).thenReturn(Arrays.asList(fine));
+        when(fineRepository.findAll()).thenReturn(List.of(fine));
 
         List<FineEntity> result = fineService.getAllFine();
 
-        assertNotNull(result);
         assertEquals(1, result.size());
-        verify(fineRepository, times(1)).findAll();
+    }
+
+    @Test
+    void testGetAllFinesByClientId() {
+        when(fineRepository.findByClientId(10L)).thenReturn(List.of(fine));
+
+        List<FineEntity> result = fineService.getAllFinesByClientId(10L);
+
+        assertEquals(1, result.size());
+        assertEquals(10L, result.get(0).getClientId());
     }
 
     @Test
     void testSaveFine() {
-        when(fineRepository.save(any(FineEntity.class))).thenReturn(fine);
+        when(fineRepository.save(fine)).thenReturn(fine);
 
         FineEntity result = fineService.saveFine(fine);
 
-        assertNotNull(result);
-        assertEquals(fine.getFineId(), result.getFineId());
-        verify(fineRepository, times(1)).save(fine);
+        assertEquals(fine, result);
     }
 
     @Test
     void testUpdateFine() {
-        when(fineRepository.save(any(FineEntity.class))).thenReturn(fine);
+        when(fineRepository.save(fine)).thenReturn(fine);
 
         FineEntity result = fineService.updateFine(fine);
 
-        assertNotNull(result);
-        assertEquals(fine.getFineId(), result.getFineId());
-        verify(fineRepository, times(1)).save(fine);
+        assertEquals(fine, result);
     }
 
     @Test
-    void testDeleteFineById_Success() throws Exception {
+    void testDeleteFineByIdSuccess() throws Exception {
         doNothing().when(fineRepository).deleteById(1L);
 
         boolean result = fineService.deleteFineById(1L);
 
         assertTrue(result);
-        verify(fineRepository, times(1)).deleteById(1L);
     }
 
     @Test
-    void testDeleteFineById_Exception() {
-        doThrow(new RuntimeException("DB error")).when(fineRepository).deleteById(1L);
+    void testDeleteFineByIdThrowsException() {
+        doThrow(new RuntimeException("error")).when(fineRepository).deleteById(1L);
 
-        Exception exception = assertThrows(Exception.class, () -> fineService.deleteFineById(1L));
-        assertTrue(exception.getMessage().contains("DB error"));
-        verify(fineRepository, times(1)).deleteById(1L);
+        Exception exception = assertThrows(Exception.class, () -> {
+            fineService.deleteFineById(1L);
+        });
+
+        assertEquals("error", exception.getMessage());
     }
 
     @Test
-    void testHasFinesByClientId_True() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "fine")).thenReturn(Arrays.asList(fine));
+    void testHasFinesByClientIdTrue() {
+        when(fineRepository.findByClientId(10L)).thenReturn(List.of(fine));
 
         assertTrue(fineService.hasFinesByClientId(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "fine");
     }
 
     @Test
-    void testHasFinesByClientId_False() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "fine")).thenReturn(Collections.emptyList());
+    void testHasFinesByClientIdFalse() {
+        when(fineRepository.findByClientId(10L)).thenReturn(Collections.emptyList());
 
         assertFalse(fineService.hasFinesByClientId(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "fine");
     }
 
     @Test
-    void testHasFinesOfToolReposition_True() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "reposition")).thenReturn(Arrays.asList(fine));
+    void testHasFinesOfToolRepositionTrue() {
+        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "reposition"))
+                .thenReturn(List.of(fine));
 
         assertTrue(fineService.hasFinesOfToolReposition(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "reposition");
     }
 
     @Test
-    void testHasFinesOfToolReposition_False() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "reposition")).thenReturn(Collections.emptyList());
+    void testHasFinesOfToolRepositionFalse() {
+        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "reposition"))
+                .thenReturn(Collections.emptyList());
 
         assertFalse(fineService.hasFinesOfToolReposition(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "reposition");
     }
 
     @Test
-    void testHasLessOrEqual5FinesByClientId_True() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "fine")).thenReturn(Arrays.asList(fine));
+    void testHasLessOrEqual5FinesTrue() {
+        when(fineRepository.findByClientId(10L)).thenReturn(List.of(fine, fine));
 
         assertTrue(fineService.hasLessOrEqual5FinesByClientId(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "fine");
     }
 
     @Test
-    void testHasLessOrEqual5FinesByClientId_False() {
-        when(fineRepository.getFineEntityByClientIdAndTypeIs(10L, "fine")).thenReturn(Arrays.asList(fine, fine, fine, fine, fine, fine));
+    void testHasLessOrEqual5FinesFalse() {
+        when(fineRepository.findByClientId(10L)).thenReturn(List.of(fine, fine, fine, fine, fine, fine));
 
         assertFalse(fineService.hasLessOrEqual5FinesByClientId(10L));
-        verify(fineRepository, times(1)).getFineEntityByClientIdAndTypeIs(10L, "fine");
+    }
+
+    @Test
+    void testPayFine() {
+        ClientEntity client = new ClientEntity();
+        client.setState("bloqueado");
+
+        when(clientService.getClientById(1L)).thenReturn(client);
+        when(fineRepository.findById(1L)).thenReturn(Optional.of(fine));
+        when(fineRepository.findByClientId(1L)).thenReturn(List.of(fine));
+
+        fineService.payFine(1L, 1L);
+
+        assertEquals("pagado", fine.getState());
+        verify(fineRepository, times(1)).save(fine);
+    }
+
+    @Test
+    void testPayFineActivatesClient() {
+        ClientEntity client = new ClientEntity();
+        client.setState("bloqueado");
+
+        when(clientService.getClientById(10L)).thenReturn(client);
+        when(fineRepository.findById(1L)).thenReturn(Optional.of(fine));
+        when(fineRepository.findByClientId(10L)).thenReturn(List.of(fine)); // 1 multa
+
+        fineService.payFine(10L, 1L);
+
+        assertEquals("pagado", fine.getState());
+        verify(clientService, times(1)).updateClient(client);
+        assertEquals("activo", client.getState());
     }
 }
